--- a/index.html
+++ b/index.html
@@ -82,28 +82,12 @@
             text-align: center;
             font-size: 4rem;
             font-weight: bold;
-            background: linear-gradient(90deg, #fbbf24 0%, #f97316 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            animation: popIn 0.8s ease-out;
-        }
-        @keyframes popIn {
-            0% { opacity: 0; transform: scale(0.3); }
-            100% { opacity: 1; transform: scale(1); }
+            color: gold;
         }
         .sold-details {
             text-align: center;
             font-size: 1.5rem;
             color: #a5f3fc;
-            animation: slideIn 0.6s ease-out;
-        }
-        .waiting-message {
-            text-align: center;
-            font-size: 1.3rem;
-            color: #fbbf24;
-            margin-top: 20px;
-            animation: slideIn 0.8s ease-out;
         }
     </style>
 </head>
@@ -111,8 +95,7 @@
     <div class="sold-overlay" id="soldOverlay">
         <div class="hammer-animation">⚒️</div>
         <div class="sold-message">SOLD!</div>
-        <div class="sold-details" id="soldDetails">赢家: John - RM 600,000</div>
-        <div class="waiting-message">⏳ 等待老师进入下一件房产...</div>
+        <div class="sold-details" id="soldDetails">赢家</div>
     </div>
 
     <div class="container">
@@ -218,7 +201,6 @@
                 const { data: allProps } = await sb.from('properties').select('*').order('id');
                 if (!allProps || allProps.length === 0) return;
 
-                // 找 open 状态的房产
                 const openProp = allProps.find(p => p.status === 'open');
                 if (openProp) {
                     currentPropertyObj = openProp;
@@ -230,11 +212,12 @@
 
                 updateUI();
 
-                // 检查成交 - 只在从 open 变成 sold 时显示
+                // 只在从 open 变成 sold 时显示一次
                 if (currentPropertyObj && lastSeenStatus === 'open' && currentPropertyObj.status === 'sold') {
-                    showSoldOverlay();
-                }
-                if (currentPropertyObj) {
+                    document.getElementById('soldDetails').textContent = `赢家: ${currentPropertyObj.highest_bidder} - RM ${currentPropertyObj.current_price.toLocaleString()}`;
+                    document.getElementById('soldOverlay').classList.add('active');
+                    lastSeenStatus = 'sold-shown'; // 标记为已显示，防止重复
+                } else if (currentPropertyObj) {
                     lastSeenStatus = currentPropertyObj.status;
                 }
             } catch (err) {
@@ -283,12 +266,6 @@
             box.innerHTML = text;
             box.classList.remove('hidden');
             setTimeout(() => box.classList.add('hidden'), 3000);
-        }
-
-        function showSoldOverlay() {
-            if (!currentPropertyObj) return;
-            document.getElementById('soldDetails').textContent = `赢家: ${currentPropertyObj.highest_bidder} - RM ${currentPropertyObj.current_price.toLocaleString()}`;
-            document.getElementById('soldOverlay').classList.add('active');
         }
 
         function updateUI() {
